# mediawiki-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: publish.yml  rust.yml
src/: api.rs  lib.rs  oredict.rs  tilesheet.rs
